--- a/scss/style.css
+++ b/scss/style.css
@@ -90,6 +90,22 @@ body {
     max-width: 300px;
   }
 }
+.title {
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 42px;
+  text-align: center;
+  color: #232323;
+}
+
+.descr {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 140%;
+  text-align: center;
+  color: #232323;
+}
+
 .btn {
   background: linear-gradient(236.13deg, #fa31f2 -7.51%, #992894 72.71%);
   border-radius: 12px;
@@ -513,7 +529,7 @@ body {
   }
 
   .slide-dot.slide-active {
-    background-color: #f70000;
+    background-color: #992894;
   }
 
   .slide-dot {
@@ -546,6 +562,1109 @@ body {
   .main__bottom-descr {
     text-align: center;
   }
+}
+/* =================================  model  ================================== */
+.model {
+  background: url("../img/model/back.png") 50%/cover no-repeat;
+}
+
+.model__body {
+  padding: 70px 0;
+  position: relative;
+}
+
+.model__title {
+  margin-bottom: 20px;
+}
+
+.model__descr {
+  max-width: 917px;
+  margin: 0 auto 60px auto;
+}
+
+.model__stages-title {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 140%;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.model__stages {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 22px;
+  grid-row-gap: 22px;
+  margin-bottom: 60px;
+}
+
+.model__stage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  filter: drop-shadow(3px 4px 14px rgba(0, 0, 0, 0.25));
+  border-radius: 30px 30px 10px 10px;
+  background: rgba(64, 64, 64, 0.8);
+  position: relative;
+  min-height: 233px;
+}
+
+.div1 {
+  grid-area: 1 / 1 / 2 / 2;
+  background: url("../img/model/01.png") 50%/cover no-repeat;
+}
+
+.div2 {
+  grid-area: 1 / 2 / 2 / 3;
+  background: url("../img/model/02.png") 50%/cover no-repeat;
+}
+
+.div3 {
+  grid-area: 1 / 3 / 2 / 4;
+  background: url("../img/model/03.png") 50%/cover no-repeat;
+}
+
+.div4 {
+  grid-area: 2 / 1 / 3 / 2;
+  background: url("../img/model/04.png") 50%/cover no-repeat;
+}
+
+.div5 {
+  grid-area: 2 / 2 / 3 / 3;
+  background: url("../img/model/05.png") 50%/cover no-repeat;
+}
+
+.div6 {
+  grid-area: 2 / 3 / 3 / 4;
+  background: url("../img/model/06.png") 50%/cover no-repeat;
+}
+
+.model__stages-number {
+  position: absolute;
+  top: 0px;
+  left: 10px;
+  font-weight: 800;
+  font-size: 60px;
+  line-height: 123%;
+  color: #f4c151;
+}
+
+.model__stages-descr {
+  max-width: 300px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 140%;
+  text-align: center;
+  color: #ffffff;
+  margin-top: 25px;
+}
+.model__stages-descr span {
+  display: block;
+}
+
+@media (max-width: 1023px) {
+  .title {
+    font-size: 34px;
+    line-height: 34px;
+  }
+
+  .descr {
+    font-size: 18px;
+  }
+
+  .model__descr {
+    margin: 0 auto 50px auto;
+  }
+
+  .model__stages {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+  }
+
+  .div1 {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+
+  .div2 {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+
+  .div3 {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+
+  .div4 {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+
+  .div5 {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+
+  .div6 {
+    grid-area: 3 / 2 / 4 / 3;
+  }
+}
+@media (max-width: 767px) {
+  .model__stages-descr {
+    font-size: 16px;
+    margin-top: 20px;
+    max-width: 255px;
+  }
+
+  .model__stages-number {
+    font-size: 52px;
+  }
+}
+@media (max-width: 600px) {
+  .model__body {
+    padding: 40px 0;
+  }
+
+  .title {
+    font-size: 21px;
+    line-height: 21px;
+  }
+
+  .descr {
+    font-size: 16px;
+  }
+
+  .model__descr {
+    margin: 0 auto 25px auto;
+  }
+
+  .model__stages {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 15px;
+    margin-bottom: 25px;
+  }
+
+  .div1 {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+
+  .div2 {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+
+  .div3 {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+
+  .div4 {
+    grid-area: 4 / 1 / 5 / 2;
+  }
+
+  .div5 {
+    grid-area: 5 / 1 / 6 / 2;
+  }
+
+  .div6 {
+    grid-area: 6 / 1 / 7 / 2;
+  }
+
+  .model__stages-descr {
+    font-size: 14px;
+    margin-top: 0px;
+    max-width: 230px;
+  }
+
+  .model__stage {
+    min-height: 190px;
+  }
+
+  .model__stages-number {
+    font-size: 42px;
+    line-height: 150%;
+  }
+}
+.model__bottom {
+  filter: drop-shadow(3px 4px 14px rgba(0, 0, 0, 0.25));
+}
+
+.model__tabs {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  z-index: 2;
+}
+
+.model__tab {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 27px 0 22px;
+  width: 366px;
+  background: #f4c151;
+  border-top: 1px solid rgba(244, 193, 81, 0.5);
+  border-radius: 20px 20px 0px 0px;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.model__tab p {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 120%;
+  max-width: 257px;
+}
+
+.model__tab.active {
+  background: #fff;
+}
+.model__tab.active p {
+  color: #232323;
+}
+
+.model__contents {
+  position: relative;
+  z-index: 3;
+}
+
+.model__content {
+  display: none;
+}
+
+.model__content.active {
+  display: flex;
+}
+
+.model__box {
+  flex: 1 1 50%;
+  padding: 67px 40px 67px 55px;
+  background-color: #fff;
+  border-radius: 0px 0px 0px 20px;
+}
+
+.model__box > *:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.model__content-title {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 140%;
+}
+
+.model__content-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+}
+
+.model__content-img {
+  flex: 1 1 50%;
+  position: relative;
+}
+
+.model__content-effect {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.model__box > .model__box-list {
+  margin-bottom: 70px;
+}
+
+.model__box-item {
+  margin-left: 30px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  position: relative;
+}
+.model__box-item::before {
+  content: "";
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background-color: #000;
+  position: absolute;
+  top: 50%;
+  left: -15px;
+  transform: translateY(-50%);
+}
+
+.model__box-text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.model__box-descr {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  max-width: 365px;
+  padding-top: 100px;
+}
+
+.model__adaptive {
+  display: none;
+}
+
+@media (max-width: 1140px) {
+  .model__tab p {
+    font-size: 18px;
+  }
+
+  .model__tab {
+    padding: 20px 0 17px;
+    width: 320px;
+  }
+
+  .model__box {
+    padding: 60px 25px 60px 32px;
+  }
+
+  .model__box > .model__box-list {
+    margin-bottom: 60px;
+  }
+}
+@media (max-width: 1023px) {
+  .model__tab {
+    padding: 10px 0 10px;
+    width: 200px;
+  }
+
+  .model__tab p {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 120%;
+  }
+
+  .model__content-img img {
+    max-width: 370px;
+  }
+
+  .model__box {
+    padding: 22px;
+  }
+
+  .model__content-title {
+    font-size: 15px;
+    line-height: 115%;
+  }
+
+  .model__content-text {
+    font-size: 14px;
+    line-height: 120%;
+  }
+
+  .model__box > .model__box-list {
+    margin-bottom: 15px;
+  }
+
+  .model__box-item {
+    margin-left: 25px;
+    font-size: 14px;
+    line-height: 120%;
+  }
+
+  .model__box-text {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .model__box-descr {
+    font-size: 18px;
+    padding-top: 60px;
+  }
+}
+@media (max-width: 767px) {
+  .model__bottom {
+    display: none;
+  }
+
+  .model__adaptive {
+    display: block;
+  }
+
+  .model__tab-adaptive {
+    padding: 16px 15px 13px;
+    width: 270px;
+    margin: 0 auto 15px auto;
+    min-height: 75px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background: #f4c151;
+    border-top: 1px solid rgba(244, 193, 81, 0.5);
+    color: #ffffff;
+    cursor: pointer;
+  }
+
+  .model__tab-adaptive p {
+    font-weight: 800;
+    font-size: 14px;
+    line-height: 120%;
+    max-width: 257px;
+  }
+
+  .model__tab-adaptive.active {
+    background: #fff;
+    margin: 0 auto;
+    border-radius: 20px 20px 0 0;
+  }
+  .model__tab-adaptive.active p {
+    color: #232323;
+  }
+
+  .model__content-adaptive {
+    display: none;
+  }
+
+  .model__content-adaptive.active {
+    display: flex;
+    flex-direction: column;
+    max-width: 270px;
+    margin: 0 auto 15px auto;
+  }
+
+  .model__box {
+    padding: 15px;
+    text-align: center;
+    border-radius: 0px 0px 0px 0px;
+  }
+
+  .model__content-img img {
+    max-width: 270px;
+  }
+
+  .model__content-img {
+    border-radius: 0 0 20px 20px;
+    overflow: hidden;
+  }
+
+  .model__box-descr {
+    font-size: 16px;
+    padding-top: 20px;
+  }
+}
+/* ==================================  amount  ===================================== */
+.amount {
+  background: url("../img/amount/back.png") 50%/cover no-repeat;
+}
+
+.amount__body {
+  padding: 90px 0 50px 0;
+  position: relative;
+}
+
+.amount__content {
+  display: flex;
+  margin-bottom: 200px;
+}
+
+.amount__title {
+  max-width: 385px;
+  color: #fff;
+  text-align: left;
+}
+
+.amount__box {
+  background: linear-gradient(90deg, #20b97b 0%, #0ca869 100%);
+  border-radius: 20px 20px 20px 0px;
+  padding: 50px 60px;
+  position: relative;
+  z-index: 4;
+}
+
+.amount__descr {
+  max-width: 627px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 140%;
+  color: #ffffff;
+}
+.amount__descr span {
+  font-weight: 400;
+}
+
+.amount__box > *:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.amount__laptop {
+  position: absolute;
+  top: 48%;
+  left: 0;
+  transform: translateY(-50%);
+  z-index: 5;
+}
+
+.amount__effect {
+  position: absolute;
+  top: 64%;
+  left: 5%;
+  transform: translateY(-50%);
+  z-index: 2;
+}
+
+.amount__smoke {
+  position: absolute;
+  top: 64%;
+  left: -18%;
+  transform: translateY(-50%);
+  z-index: 6;
+}
+
+.form-block {
+  background: #ffffff;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.07);
+  border-radius: 18px;
+  padding: 30px 19px 17px;
+  position: relative;
+  z-index: 10;
+}
+
+.form-block__title {
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 120%;
+  text-align: center;
+  color: #232323;
+  margin-bottom: 26px;
+}
+
+.form__field {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+.form__input {
+  max-width: 266px;
+  padding: 20px 20px 20px 60px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  background: #ffffff;
+  border: 1px solid #e1e1e1;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  color: #b4b4b4;
+}
+
+.form__input-phone {
+  background: url("../img/amount/phone.svg") 19px 20px no-repeat;
+}
+
+.form__input-email {
+  background: url("../img/amount/email.svg") 21px 23px no-repeat;
+}
+
+.form__input-name {
+  background: url("../img/amount/person.svg") 21px 21px no-repeat;
+}
+
+.main__btn-cover {
+  width: 271px;
+}
+
+.form__policy {
+  display: flex;
+  align-items: center;
+}
+
+.form__policy p {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 140%;
+  color: #b4b4b4;
+  padding-top: 5px;
+  text-align: center;
+}
+
+.policy__tick {
+  margin-right: 7px;
+}
+
+.politicy {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.politicy:hover {
+  text-decoration: none;
+}
+
+.adaptive__btn-cover {
+  display: none;
+}
+
+@media (max-width: 1350px) {
+  .amount__effect {
+    display: none;
+  }
+}
+@media (max-width: 1130px) {
+  .amount__content {
+    flex-direction: column;
+  }
+
+  .amount__title {
+    max-width: 800px;
+    margin: 0 auto 20px auto;
+    color: #fff;
+    text-align: center;
+  }
+
+  .amount__box {
+    padding: 40px;
+    max-width: 600px;
+    margin-left: 320px;
+    text-align: center;
+  }
+
+  .amount__descr {
+    max-width: 715px;
+    font-size: 16px;
+  }
+
+  .amount__laptop {
+    max-width: 600px;
+    top: 46%;
+    left: 3%;
+  }
+
+  .amount__content {
+    margin-bottom: 135px;
+  }
+
+  .form-block {
+    padding: 20px 15px 17px;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+
+  .form__field {
+    flex-direction: column;
+    align-items: center;
+    max-width: 600px;
+    margin: 0 auto;
+  }
+
+  .form__field > *:not(:last-child) {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 1023px) {
+  .amount__box {
+    padding: 40px;
+    max-width: 600px;
+    margin: 0 auto 60px auto;
+    text-align: center;
+    border-radius: 20px;
+  }
+
+  .amount__smoke {
+    display: none;
+  }
+
+  .amount__laptop {
+    display: block;
+    position: static;
+    max-width: 450px;
+    margin: 0 auto;
+  }
+
+  .form-block {
+    margin: -150px auto 0 auto;
+  }
+}
+@media (max-width: 600px) {
+  .amount__body {
+    padding: 40px 0;
+  }
+
+  .amount__box {
+    padding: 15px;
+    margin: 0 auto 20px auto;
+  }
+
+  .amount__content {
+    margin-bottom: 115px;
+  }
+
+  .amount__form {
+    display: none;
+  }
+
+  .amount__laptop {
+    max-width: 270px;
+    margin: 0 auto -75px;
+  }
+
+  .amount__descr {
+    font-size: 14px;
+  }
+
+  .adaptive__btn-cover {
+    display: block;
+  }
+}
+/* ===============================  history  =============================== */
+.history {
+  background: url("../img/history/back.png") 50%/cover no-repeat;
+}
+
+.history__body {
+  padding: 90px 0 65px;
+  position: relative;
+  overflow: hidden;
+}
+
+.history__title {
+  max-width: 937px;
+  margin: 0 auto 40px auto;
+}
+
+.history__descr {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 140%;
+  text-align: center;
+  max-width: 750px;
+  margin: 0 auto 37px auto;
+}
+
+.history__box {
+  max-width: 445px;
+}
+
+.history__box > *:not(:last-child) {
+  margin-bottom: 64px;
+}
+
+.history__text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+}
+.history__text span {
+  font-weight: 800;
+}
+
+.history__line {
+  position: absolute;
+  top: 25%;
+  left: 0%;
+}
+
+.history__owner {
+  position: absolute;
+  bottom: 0%;
+  right: -11%;
+}
+
+@media (max-width: 1120px) {
+  .history__line {
+    max-width: 120px;
+  }
+
+  .history__owner {
+    right: -12%;
+  }
+}
+@media (max-width: 1023px) {
+  .history__line {
+    display: none;
+  }
+
+  .history__owner {
+    display: block;
+    position: static;
+    max-width: 500px;
+    margin: 0 60px -65px auto;
+  }
+
+  .history__box {
+    max-width: 767px;
+    margin: 0 auto 20px auto;
+    text-align: center;
+  }
+
+  .history__box > *:not(:last-child) {
+    margin-bottom: 25px;
+  }
+}
+@media (max-width: 767px) {
+  .history__body {
+    padding: 60px 0 40px;
+  }
+
+  .history__owner {
+    display: block;
+    position: static;
+    max-width: 500px;
+    margin: 0 0 -40px auto;
+  }
+}
+@media (max-width: 600px) {
+  .history__body {
+    padding: 40px 0;
+  }
+
+  .history__title {
+    margin: 0 auto 25px auto;
+  }
+
+  .history__descr {
+    font-size: 16px;
+    margin: 0 auto 25px auto;
+  }
+
+  .history__box > *:not(:last-child) {
+    margin-bottom: 15px;
+  }
+
+  .history__text {
+    font-size: 14px;
+    line-height: 125%;
+  }
+
+  .history__owner {
+    max-width: 270px;
+    margin: -10px -26px -40px auto;
+  }
+}
+/* ====================================  categories  ==================================== */
+.categories {
+  background: url("../img/categories/back.png") 50%/cover no-repeat;
+}
+
+.categories__body {
+  padding: 89px 0 61px;
+  position: relative;
+}
+
+.categories__title {
+  max-width: 580px;
+  text-align: left;
+  margin-bottom: 22px;
+}
+
+.categories__descr {
+  max-width: 460px;
+  text-align: left;
+  margin-bottom: 81px;
+}
+
+.categories__subtitle {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 140%;
+  margin-bottom: 41px;
+}
+
+.categories__list {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 81px;
+}
+
+.categories__list.third {
+  margin-bottom: 0;
+}
+
+.categories__item {
+  filter: drop-shadow(3px 4px 14px rgba(0, 0, 0, 0.25));
+  border-radius: 30px 30px 10px 10px;
+}
+
+.categories__rect {
+  background: #ffffff;
+  box-shadow: 3px 4px 14px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  display: flex;
+  max-width: 776px;
+  margin: 0 auto 81px auto;
+}
+
+.categories__rect-descr {
+  padding: 45px 30px 45px 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+}
+
+.categories__line {
+  position: absolute;
+  top: 6.5%;
+  right: 0%;
+}
+
+@media (max-width: 1146px) {
+  .categories__item-img {
+    max-width: 320px;
+  }
+
+  .categories__line {
+    max-width: 400px;
+  }
+}
+@media (max-width: 1023px) {
+  .categories__line {
+    max-width: 190px;
+    top: 4%;
+  }
+
+  .categories__body {
+    padding: 75px 0 50px;
+  }
+
+  .categories__descr {
+    margin-bottom: 40px;
+  }
+
+  .categories__subtitle {
+    text-align: center;
+    margin-bottom: 35px;
+  }
+
+  .categories__list {
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+  }
+
+  .categories__list > *:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
+  .categories__item:nth-child(1) {
+    margin-right: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .categories__line {
+    display: none;
+  }
+
+  .categories__title {
+    text-align: center;
+  }
+
+  .categories__descr {
+    text-align: center;
+    margin: 0 auto 25px auto;
+  }
+
+  .categories__item:nth-child(1) {
+    margin-right: 0px;
+  }
+
+  .categories__rect-descr {
+    padding: 20px 10px;
+    font-size: 17px;
+    line-height: 135%;
+  }
+
+  .categories__rect {
+    margin: 0 auto 40px auto;
+  }
+
+  .categories__subtitle {
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 600px) {
+  .categories__body {
+    padding: 40px 0;
+  }
+
+  .categories__title {
+    margin-bottom: 20px;
+  }
+
+  .categories__descr {
+    margin: 0 auto 20px auto;
+    font-size: 16px;
+  }
+
+  .categories__subtitle {
+    font-size: 16px;
+    line-height: 130%;
+    margin-bottom: 20px;
+  }
+
+  .categories__item-img {
+    max-width: 260px;
+  }
+
+  .categories__list > *:not(:last-child) {
+    margin-bottom: 15px;
+  }
+
+  .categories__rect {
+    flex-direction: column;
+  }
+
+  .categories__rect-descr {
+    font-size: 14px;
+    text-align: center;
+  }
+
+  .categories__list {
+    margin-bottom: 25px;
+  }
+
+  .categories__rect {
+    margin: 0 auto 25px auto;
+  }
+}
+/* ========================================  slider  ==================================== */
+.slider {
+  background: url("../img/slider/back.png") 50%/cover no-repeat;
+  filter: drop-shadow(3px 4px 14px rgba(0, 0, 0, 0.25));
+}
+
+.slider__body {
+  padding: 21px 0px 42px;
+}
+
+.slider__title {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 140%;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.slider__wrapper {
+  max-width: 804px;
+  margin: 0 auto;
+  border-radius: 20px;
+}
+
+.slider__item {
+  display: flex;
+  min-width: 0;
+}
+
+.slider__text {
+  padding: 60px 50px 58px 25px;
+  font-size: 18px;
+  line-height: 140%;
+  background: #fff;
+  border-radius: 20px 0 0 20px;
+}
+
+.slider__img {
+  object-fit: cover;
+  height: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
